MAT-8277 replace validate display ids with set display ids